fix(app): changed background color

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<app-maintenance-header></app-maintenance-header>
-<app-maintenance-menu></app-maintenance-menu>
-<router-outlet></router-outlet>
+<div class="maintenance-app">
+    <app-maintenance-header></app-maintenance-header>
+    <app-maintenance-menu></app-maintenance-menu>
+    <router-outlet></router-outlet>
+</div>
