fix: added left field menu component

--- a/src/app/container/maintenance-fields/maintenance-fields.component.html
+++ b/src/app/container/maintenance-fields/maintenance-fields.component.html
@@ -7,20 +7,10 @@
             <div>
               <span tabindex="0" class="maintenance-left-menu-span">
                 <div>
-                  <div class="maintenance-left-menu-icon-text-representation">
-                    <span class="material-icons" color="#757575"
-                      class="maintenance-left-menu-folder-icon">folder_open</span>
-                    <div>Fields</div>
-                  </div>
-                </div>
-              </span>
-            </div>
-            <div>
-              <span tabindex="0" class="maintenance-left-menu-span">
-                <div>
-                  <div class="maintenance-left-menu-icon-text-representation">
-                    <span class="material-icons" color="#757575"
-                      class="maintenance-left-menu-folder-icon">folder_open</span>
+                  <div matRipple [matRippleColor]="rippleEffectsColor" [routerLink]="['/fields', 'fieldsGroup' ]" routerLinkActive="active" class="maintenance-left-menu-icon-text-representation">
+                    <i class="material-icons maintenance-left-menu-folder-icon">
+                      folder
+                    </i>
                     <div>Fields Groups</div>
                   </div>
                 </div>
@@ -30,8 +20,9 @@
               <span tabindex="0" class="maintenance-left-menu-span">
                 <div>
                   <div class="maintenance-left-menu-icon-text-representation">
-                    <span class="material-icons" color="#757575"
-                      class="maintenance-left-menu-folder-icon">folder_open</span>
+                    <i class="material-icons maintenance-left-menu-folder-icon">
+                      folder
+                    </i>
                     <div>Fields Options</div>
                   </div>
                 </div>
@@ -41,8 +32,9 @@
               <span tabindex="0" class="maintenance-left-menu-span">
                 <div>
                   <div class="maintenance-left-menu-icon-text-representation">
-                    <span class="material-icons" color="#757575"
-                      class="maintenance-left-menu-folder-icon">folder_open</span>
+                    <i class="material-icons maintenance-left-menu-folder-icon">
+                      folder
+                    </i>
                     <div>Fields Options Groups</div>
                   </div>
                 </div>
@@ -53,8 +45,9 @@
             <span tabindex="0" class="maintenance-left-menu-span">
               <div>
                 <div class="maintenance-left-menu-icon-text-representation">
-                  <span class="material-icons" color="#757575"
-                    class="maintenance-left-menu-folder-icon">folder_open</span>
+                  <i class="material-icons maintenance-left-menu-folder-icon">
+                    folder
+                  </i>
                   <div>Fields Options Groups Set</div>
                 </div>
               </div>
@@ -64,4 +57,6 @@
       </div>
     </div>
   </div>
+  <!-- How Much The Work Is That -->
+  
 </main>
