fix: added filters to app.module.ts

--- a/src/app/components/maintenance-menu/maintenance-menu.component.scss
+++ b/src/app/components/maintenance-menu/maintenance-menu.component.scss
@@ -42,10 +42,10 @@
 }
 
 .active {
-  outline: 0;
+  outline: none;
   border-bottom: 3px solid orange;
 }
 
 .tab-menu-item:focus {
-    outline: 0;
+    outline: none;
 }
