--- a/src/app/container/maintenance-forms/maintenance-forms.component.html
+++ b/src/app/container/maintenance-forms/maintenance-forms.component.html
@@ -8,7 +8,7 @@
               <span tabindex="0" class="maintenance-left-menu-span">
                 <div>
                   <div class="left-menu-item" matRipple [matRippleColor]="rippleEffectsColor"
-                    [routerLink]="['/forms', 'forms' ]" routerLinkActive="active"
+                    [routerLink]="['/forms', 'hrhisForms' ]" routerLinkActive="active"
                     class="maintenance-left-menu-icon-text-representation">
                     <i class="material-icons maintenance-left-menu-folder-icon">
                       folder
