--- a/src/app/container/all-maintenance-options/all-maintenance-options.component.html
+++ b/src/app/container/all-maintenance-options/all-maintenance-options.component.html
@@ -2,43 +2,62 @@
   <div>
     <div>
       <div>
-        <div class="left-bar" style="background-color: rgb(243, 243, 243); overflow-y: initial; width: 295px;">
-          <div style="padding: 0px; background-color: transparent; margin-top: 16px;">
-            <div>
-              <span tabindex="0"
-                style="border: 10px; box-sizing: border-box; display: block; font-family: Roboto, sans-serif; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); cursor: pointer; text-decoration: none; margin: 0px 8px; padding: 0px; outline: none; font-size: 14px; font-weight: inherit; position: relative; z-index: 1; color: rgba(0, 0, 0, 0.87); line-height: 16px; transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; border-radius: 5px; background: none;">
-                <div>
-                  <div style="margin-left: 0px; padding: 16px 16px 16px 72px; position: relative;">
-                    <span class="material-icons" color="#757575"
-                      style="color: rgb(117, 117, 117); position: absolute; font-size: 24px; display: block; user-select: none; transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; height: 24px; width: 24px; top: 0px; margin: 12px; left: 4px;">folder_open</span>
-                    <div>Validation rule</div>
+        <div class="left-bar">
+          <div class="maintenance-all-services-container-div">
+            <div *ngFor="let serviceItem of serviceList; let i = index">
+              <div>
+                <main class="maintenance-all-services-container">
+                  <div style="margin-bottom: 4rem; width: 100%;">
+                    <div>
+                      <div>
+                        <h1 class="maintenance-all-services-container-title">
+                          {{ serviceItem.name }}
+                        </h1>
+                        <div>
+                          <div *ngFor="let service of serviceItem.services" class="maintenance-all-service-container">
+                            <div>
+                              <div class="maintenance-all-service-container-title-div">
+                                <div>
+                                  <span class="title">{{ service.title }}</span><span class="separator"></span>
+                                </div>
+                              </div>
+                              <div class="maintenance-all-service-container-description-div">
+                                {{ service.description }}
+                              </div>
+                              <div class="maintenance-all-service-container-operations">
+                                <button tabindex="0" type="button" class="button">
+                                  <div>
+                                    <div class="button-section">
+                                      <div class="add-section"></div>
+                                      <span class="add">Add</span>
+                                    </div>
+                                    <span class="material-icons" color="rgba(0, 0, 0, 0.87)"
+                                      style="color: rgba(0, 0, 0, 0.87); position: relative; font-size: 24px; display: inline-block; user-select: none; transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;"></span>
+                                  </div>
+                                </button>
+                                <button tabindex="0" type="button" class="button">
+                                  <div>
+                                    <div class="button-section">
+                                      <div class="list-section"></div>
+                                      <span class="list">List</span>
+                                    </div>
+                                    <span class="material-icons" color="rgba(0, 0, 0, 0.87)"
+                                      style="color: rgba(0, 0, 0, 0.87); position: relative; font-size: 24px; display: inline-block; user-select: none; transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;"></span>
+                                  </div>
+                                </button>
+                              </div>
+                            </div>
+                          </div>
+                          <div style="clear: both;"></div>
+                        </div>
+                      </div>
+                    </div>
                   </div>
-                </div>
-              </span>
-            </div>
-            <div>
-              <span tabindex="0"
-                style="border: 10px; box-sizing: border-box; display: block; font-family: Roboto, sans-serif; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); cursor: pointer; text-decoration: none; margin: 0px 8px; padding: 0px; outline: none; font-size: 14px; font-weight: inherit; position: relative; z-index: 1; color: rgba(0, 0, 0, 0.87); line-height: 16px; transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; border-radius: 5px; background: none;">
+                </main>
                 <div>
-                  <div style="margin-left: 0px; padding: 16px 16px 16px 72px; position: relative;">
-                    <span class="material-icons" color="#757575"
-                      style="color: rgb(117, 117, 117); position: absolute; font-size: 24px; display: block; user-select: none; transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; height: 24px; width: 24px; top: 0px; margin: 12px; left: 4px;">folder_open</span>
-                    <div>Validation rule group</div>
-                  </div>
+                  <div style="clear: both;"></div>
                 </div>
-              </span>
-            </div>
-            <div>
-              <span tabindex="0"
-                style="border: 10px; box-sizing: border-box; display: block; font-family: Roboto, sans-serif; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); cursor: pointer; text-decoration: none; margin: 0px 8px; padding: 0px; outline: none; font-size: 14px; font-weight: inherit; position: relative; z-index: 1; color: rgba(0, 0, 0, 0.87); line-height: 16px; transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; border-radius: 5px; background: none;">
-                <div>
-                  <div style="margin-left: 0px; padding: 16px 16px 16px 72px; position: relative;">
-                    <span class="material-icons" color="#757575"
-                      style="color: rgb(117, 117, 117); position: absolute; font-size: 24px; display: block; user-select: none; transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; height: 24px; width: 24px; top: 0px; margin: 12px; left: 4px;">folder_open</span>
-                    <div>Validation notification</div>
-                  </div>
-                </div>
-              </span>
+              </div>
             </div>
           </div>
         </div>
