feat(reports-component): added support for the report component

--- a/src/app/components/maintenance-menu/maintenance-menu.component.html
+++ b/src/app/components/maintenance-menu/maintenance-menu.component.html
@@ -17,9 +17,9 @@
   </button>
   <button tabindex="0" type="button" class="tab-menu-button">
     <div>
-      <div matRipple [matRippleColor]="rippleEffectsColor" routerLink="/filters" routerLinkActive="active"
+      <div matRipple [matRippleColor]="rippleEffectsColor" routerLink="/reports" routerLinkActive="active"
         class="tab-menu-item">
-        Filters
+        Reports
       </div>
     </div>
   </button><button tabindex="0" type="button" class="tab-menu-button">
