feat(menu-header): added support for the menu header component
The new menu component was added to give the good presentation of the app

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="maintenance-app">
-    <app-maintenance-header></app-maintenance-header>
+    <app-menu-header></app-menu-header>
     <app-maintenance-menu></app-maintenance-menu>
     <router-outlet></router-outlet>
 </div>
