--- a/src/app/shared/components/menu-header/menu-header.component.html
+++ b/src/app/shared/components/menu-header/menu-header.component.html
@@ -2,9 +2,11 @@
   <div class="maintenance-header-sub-container">
     <a href="" class="title-link" title="HRIS Maintenance" style="min-width: 175px;">
       <div class="maintenance-header-container-logo">
-        <div><i class="material-icons header-logo">
+        <div>
+          <i class="material-icons header-logo">
             settings
-          </i></div>
+          </i>
+        </div>
       </div>
     </a>
     <div class="maintenance-header-container-title">
