feat(menu-services): added support for the soft-coded menu component
The menu generated from configuration is added in order to add flexibility.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="maintenance-app">
     <app-menu-header></app-menu-header>
-    <app-maintenance-menu></app-maintenance-menu>
+    <app-menu-services [menuConfigurations]="menuSettings"></app-menu-services>
     <router-outlet></router-outlet>
 </div>
