--- a/src/app/shared/components/menu-services/menu-services.component.scss
+++ b/src/app/shared/components/menu-services/menu-services.component.scss
@@ -1,5 +1,5 @@
 .maintenance-menu-bar {
-  background-color: #2E5E97;
+  background-color: #2e5e97;
 }
 
 .tab-menu-button {
@@ -47,5 +47,5 @@
 }
 
 .tab-menu-item:focus {
-    outline: none;
+  outline: none;
 }
