--- a/src/app/shared/components/menu-aside/menu-aside.component.html
+++ b/src/app/shared/components/menu-aside/menu-aside.component.html
@@ -4,30 +4,16 @@
       <div>
         <div class="left-bar" class="maintenance-left-menu-container-item">
           <div class="maintenance-left-menu-container-holder">
-            <div>
+            <div *ngFor="let menu of menuSettings[0].menuOptions">
               <span tabindex="0" class="maintenance-left-menu-span">
                 <div>
                   <div class="left-menu-item" matRipple [matRippleColor]="rippleEffectsColor"
-                    [routerLink]="['/reports', 'standardReports' ]" routerLinkActive="active"
+                    [routerLink]="['/' + menuSettings[0].route, menu.route ]" routerLinkActive="active"
                     class="maintenance-left-menu-icon-text-representation">
                     <i class="material-icons maintenance-left-menu-folder-icon">
                       folder
                     </i>
-                    <div>Standard Reports</div>
-                  </div>
-                </div>
-              </span>
-            </div>
-            <div>
-              <span tabindex="0" class="maintenance-left-menu-span">
-                <div>
-                  <div class="left-menu-item" matRipple [matRippleColor]="rippleEffectsColor"
-                    [routerLink]="['/reports', 'sqlViewReports' ]" routerLinkActive="active"
-                    class="maintenance-left-menu-icon-text-representation">
-                    <i class="material-icons maintenance-left-menu-folder-icon">
-                      folder
-                    </i>
-                    <div>SQL View Reports</div>
+                    <div>{{ menu.name }}</div>
                   </div>
                 </div>
               </span>
@@ -37,19 +23,19 @@
       </div>
     </div>
   </div>
-  <!-- <div class="maintenance-right-menu-container">
+  <div class="maintenance-right-menu-container">
     <div class="maintenance-left-menu-container-div">
-      <div class="maintenance-left-menu-container-list">
-        <div *ngFor="let service of serviceList" class="maintenance-left-menu-list-container">
+      <div class="row ml-1 mt-2">
+        <div *ngFor="let menuItem of menuSettings[0].menuOptions" class="maintenance-left-menu-list-container">
           <div>
             <div class="maintenance-left-menu-list-item">
               <div class="title-div">
-                <span class="title">{{ service.title }}</span>
+                <span class="title">{{ menuItem.name }}</span>
                 <span style="color: rgba(0, 0, 0, 0.54); display: block; font-size: 14px;"></span>
               </div>
             </div>
             <div class="description">
-              {{ service.description }}
+              {{ menuSettings[0].instruction }}
             </div>
             <div class="operation-div">
               <button tabindex="0" type="button" class="operations-button">
@@ -71,8 +57,13 @@
             </div>
           </div>
         </div>
-        <div style="clear: both;"></div>
+      </div>
+      <div class="row ml-3">
+        <div class="maintenance-left-menu-container-list">
+          <p>Render Service List Of Items</p>
+          <router-outlet></router-outlet>
+        </div>
       </div>
     </div>
-  </div> -->
+  </div>
 </main>
