feat(list-view): added support for the list view of items
Added support to display the list of items for different services

--- a/src/app/shared/components/menu-aside/menu-aside.component.html
+++ b/src/app/shared/components/menu-aside/menu-aside.component.html
@@ -4,7 +4,7 @@
       <div>
         <div class="left-bar" class="maintenance-left-menu-container-item">
           <div class="maintenance-left-menu-container-holder">
-            <div *ngFor="let menu of menuSettings[0].menuOptions">
+            <div *ngFor="let menu of menuSettings[0].menuOptions" (click)="openMenuItemsList(menu)">
               <span tabindex="0" class="maintenance-left-menu-span">
                 <div>
                   <div class="left-menu-item" matRipple [matRippleColor]="rippleEffectsColor"
