refactor: refactoring implementation

--- a/src/app/shared/components/menu-containers/menu-containers.component.html
+++ b/src/app/shared/components/menu-containers/menu-containers.component.html
@@ -1,1 +1,2 @@
-<app-list-view [menuOptions]='menuOptions'></app-list-view>
+<!-- <app-list-view [menuOptions]='menuOptions'></app-list-view> -->
+<p>This is Magnificent And I can't manage to lose it by any means</p>
