--- a/src/app/shared/components/list-view/list-view.component.html
+++ b/src/app/shared/components/list-view/list-view.component.html
@@ -1,48 +1,188 @@
-<div style="clear: both; min-height: 80px;">
-  <div>
-    <div class="search-list-items" style="display: inline-block; margin-right: 16px; position: relative; top: -15px;">
-      <div class="list-search-field"
-        style="font-size: 16px; line-height: 24px; width: 256px; height: 72px; display: inline-block; position: relative; background-color: transparent; font-family: Roboto, sans-serif; transition: height 200ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; cursor: auto;">
-        <label for="undefined-undefined-Searchbynamecodeorid-8531"
-          style="position: absolute; line-height: 22px; top: 38px; transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; z-index: 1; transform: scale(1) translate(0px, 0px); transform-origin: left top; pointer-events: none; user-select: none; color: rgba(0, 0, 0, 0.3);">Search
-          by name</label><input type="search" value="" id="undefined-undefined-Searchbynamecodeorid-8531"
-          style="padding: 0px; position: relative; width: 100%; border: none; outline: none; background-color: rgba(0, 0, 0, 0); color: rgba(0, 0, 0, 0.87); cursor: inherit; font: inherit; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); height: 100%; box-sizing: border-box; margin-top: 14px;" />
-        <div>
-          <hr
-            style="border-top: none rgb(189, 189, 189); border-left: none rgb(189, 189, 189); border-right: none rgb(189, 189, 189); border-bottom: 1px solid rgb(189, 189, 189); bottom: 8px; box-sizing: content-box; margin: 0px; position: absolute; width: 100%;" />
-          <hr
-            style="border-top: none rgb(33, 150, 243); border-left: none rgb(33, 150, 243); border-right: none rgb(33, 150, 243); border-bottom: 2px solid rgb(33, 150, 243); bottom: 8px; box-sizing: content-box; margin: 0px; position: absolute; width: 100%; transform: scaleX(0); transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;" />
+<div>
+  <div style="clear: both; min-height: 80px;">
+    <div>
+      <div
+        class="search-list-items"
+        style="display: inline-block; margin-right: 16px; position: relative; top: -15px;"
+      >
+        <div
+          class="list-search-field"
+          style="font-size: 16px; line-height: 24px; width: 256px; height: 72px; display: inline-block; position: relative; background-color: transparent; font-family: Roboto, sans-serif; transition: height 200ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; cursor: auto;"
+        >
+          <label
+            for="undefined-undefined-Searchbynamecodeorid-8531"
+            style="position: absolute; line-height: 22px; top: 38px; transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; z-index: 1; transform: scale(1) translate(0px, 0px); transform-origin: left top; pointer-events: none; user-select: none; color: rgba(0, 0, 0, 0.3);"
+            >Search by name</label
+          ><input
+            type="search"
+            value=""
+            id="undefined-undefined-Searchbynamecodeorid-8531"
+            style="padding: 0px; position: relative; width: 100%; border: none; outline: none; background-color: rgba(0, 0, 0, 0); color: rgba(0, 0, 0, 0.87); cursor: inherit; font: inherit; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); height: 100%; box-sizing: border-box; margin-top: 14px;"
+          />
+          <div>
+            <hr
+              style="border-top: none rgb(189, 189, 189); border-left: none rgb(189, 189, 189); border-right: none rgb(189, 189, 189); border-bottom: 1px solid rgb(189, 189, 189); bottom: 8px; box-sizing: content-box; margin: 0px; position: absolute; width: 100%;"
+            />
+            <hr
+              style="border-top: none rgb(33, 150, 243); border-left: none rgb(33, 150, 243); border-right: none rgb(33, 150, 243); border-bottom: 2px solid rgb(33, 150, 243); bottom: 8px; box-sizing: content-box; margin: 0px; position: absolute; width: 100%; transform: scaleX(0); transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;"
+            />
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
-<div>
-  <div class="mat-elevation-z8">
-    <table mat-table [dataSource]="dataSource">
-      <ng-container matColumnDef="position">
-        <th mat-header-cell *matHeaderCellDef>No.</th>
-        <td mat-cell *matCellDef="let element">{{ element.position }}</td>
-      </ng-container>
+  <div *ngIf="isLoading" style="clear: both;">
+    <app-progress-bar></app-progress-bar>
+    <p>Loading...</p>
+  </div>
+  <div class="table-box-shodow">
+    <div
+      *ngIf="menuOptions"
+      style=" box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 6px, rgba(0, 0, 0, 0.12) 0px 1px 4px;"
+      class=""
+    >
+      <table mat-table [dataSource]="dataSource">
+        <ng-container matColumnDef="position">
+          <th mat-header-cell *matHeaderCellDef>No.</th>
+          <td mat-cell *matCellDef="let element">{{ element.position }}</td>
+        </ng-container>
 
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef>Name</th>
-        <td mat-cell *matCellDef="let element">{{ element.name }}</td>
-      </ng-container>
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef>Name</th>
+          <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+        </ng-container>
 
-      <ng-container matColumnDef="access">
-        <th mat-header-cell *matHeaderCellDef>Public Access</th>
-        <td mat-cell *matCellDef="let element">{{ element.access }}</td>
-      </ng-container>
+        <ng-container matColumnDef="access">
+          <th mat-header-cell *matHeaderCellDef>Public Access</th>
+          <td mat-cell *matCellDef="let element">{{ element.access }}</td>
+        </ng-container>
 
-      <ng-container matColumnDef="lastUpdated">
-        <th mat-header-cell *matHeaderCellDef>Last Updated</th>
-        <td mat-cell *matCellDef="let element">{{ element.lastUpdated }}</td>
-      </ng-container>
+        <ng-container matColumnDef="lastUpdated">
+          <th mat-header-cell *matHeaderCellDef>Last Updated</th>
+          <td mat-cell *matCellDef="let element">{{ element.lastUpdated }}</td>
+        </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    </table>
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+        <ng-container matColumnDef="menu">
+          <th mat-header-cell *matHeaderCellDef></th>
+          <td mat-cell *matCellDef="let element">
+            <!-- <button mat-icon-button [matMenuTriggerFor]="appMenu"> -->
+            <i
+              class="material-icons rounded"
+              matRipple
+              [matRippleColor]="rippleColor"
+              [matMenuTriggerFor]="appMenu"
+            >
+              more_vert
+            </i>
+            <!-- </button> -->
+            <mat-menu #appMenu="matMenu">
+              <div
+                class="data-table__context-menu"
+                role="menu"
+                style="padding: 16px 0px; display: table-cell; user-select: none; width: 256px;"
+              >
+                <div>
+                  <span
+                    role="menuitem"
+                    tabindex="0"
+                    style="border: 10px; box-sizing: border-box; display: block; font-family: Roboto, sans-serif; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); cursor: pointer; text-decoration: none; margin: 0px; padding: 0px; outline: none; font-size: 15px; font-weight: inherit; position: relative; z-index: 1; color: rgba(0, 0, 0, 0.87); line-height: 32px; transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; min-height: 32px; white-space: nowrap; background: none;"
+                  >
+                    <div>
+                      <div
+                        style="margin-left: 0px; padding: 0px 24px 0px 64px; position: relative;"
+                      >
+                        <span
+                          class="material-icons"
+                          color="#757575"
+                          style="color: rgb(117, 117, 117); position: absolute; font-size: 24px; display: block; user-select: none; transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; height: 24px; width: 24px; top: 4px; margin: 0px; left: 24px;"
+                          >edit</span
+                        >
+                        <div>Edit</div>
+                      </div>
+                    </div>
+                  </span>
+                </div>
+                <!-- <div>
+                  <span role="menuitem" tabindex="0"
+                    style="border: 10px; box-sizing: border-box; display: block; font-family: Roboto, sans-serif; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); cursor: pointer; text-decoration: none; margin: 0px; padding: 0px; outline: none; font-size: 15px; font-weight: inherit; position: relative; z-index: 1; color: rgba(0, 0, 0, 0.87); line-height: 32px; transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; min-height: 32px; white-space: nowrap; background: none;">
+                    <div>
+                      <div style="margin-left: 0px; padding: 0px 24px 0px 64px; position: relative;">
+                        <span class="material-icons" color="#757575"
+                          style="color: rgb(117, 117, 117); position: absolute; font-size: 24px; display: block; user-select: none; transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; height: 24px; width: 24px; top: 4px; margin: 0px; left: 24px;">content_copy</span>
+                        <div>Clone</div>
+                      </div>
+                    </div>
+                  </span>
+                </div> -->
+                <!-- <div>
+                  <span role="menuitem" tabindex="0"
+                    style="border: 10px; box-sizing: border-box; display: block; font-family: Roboto, sans-serif; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); cursor: pointer; text-decoration: none; margin: 0px; padding: 0px; outline: none; font-size: 15px; font-weight: inherit; position: relative; z-index: 1; color: rgba(0, 0, 0, 0.87); line-height: 32px; transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; min-height: 32px; white-space: nowrap; background: none;">
+                    <div>
+                      <div style="margin-left: 0px; padding: 0px 24px 0px 64px; position: relative;">
+                        <span class="material-icons" color="#757575"
+                          style="color: rgb(117, 117, 117); position: absolute; font-size: 24px; display: block; user-select: none; transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; height: 24px; width: 24px; top: 4px; margin: 0px; left: 24px;">share</span>
+                        <div>Sharing settings</div>
+                      </div>
+                    </div>
+                  </span>
+                </div> -->
+                <div>
+                  <span
+                    role="menuitem"
+                    tabindex="0"
+                    style="border: 10px; box-sizing: border-box; display: block; font-family: Roboto, sans-serif; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); cursor: pointer; text-decoration: none; margin: 0px; padding: 0px; outline: none; font-size: 15px; font-weight: inherit; position: relative; z-index: 1; color: rgba(0, 0, 0, 0.87); line-height: 32px; transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; min-height: 32px; white-space: nowrap; background: none;"
+                  >
+                    <div>
+                      <div
+                        style="margin-left: 0px; padding: 0px 24px 0px 64px; position: relative;"
+                      >
+                        <span
+                          class="material-icons"
+                          style="color: rgb(117, 117, 117); position: absolute; font-size: 24px; display: block; user-select: none; transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; height: 24px; width: 24px; top: 4px; margin: 0px; left: 24px;"
+                          >delete</span
+                        >
+                        <div>Delete</div>
+                      </div>
+                    </div>
+                  </span>
+                </div>
+                <!-- <div>
+                  <span role="menuitem" tabindex="0"
+                    style="border: 10px; box-sizing: border-box; display: block; font-family: Roboto, sans-serif; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); cursor: pointer; text-decoration: none; margin: 0px; padding: 0px; outline: none; font-size: 15px; font-weight: inherit; position: relative; z-index: 1; color: rgba(0, 0, 0, 0.87); line-height: 32px; transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; min-height: 32px; white-space: nowrap; background: none;">
+                    <div>
+                      <div style="margin-left: 0px; padding: 0px 24px 0px 64px; position: relative;">
+                        <span class="material-icons" color="#757575"
+                          style="color: rgb(117, 117, 117); position: absolute; font-size: 24px; display: block; user-select: none; transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; height: 24px; width: 24px; top: 4px; margin: 0px; left: 24px;">details</span>
+                        <div>Show details</div>
+                      </div>
+                    </div>
+                  </span>
+                </div> -->
+                <!-- <div>
+                  <span role="menuitem" tabindex="0"
+                    style="border: 10px; box-sizing: border-box; display: block; font-family: Roboto, sans-serif; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); cursor: pointer; text-decoration: none; margin: 0px; padding: 0px; outline: none; font-size: 15px; font-weight: inherit; position: relative; z-index: 1; color: rgba(0, 0, 0, 0.87); line-height: 32px; transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; min-height: 32px; white-space: nowrap; background: none;">
+                    <div>
+                      <div style="margin-left: 0px; padding: 0px 24px 0px 64px; position: relative;">
+                        <span class="material-icons" color="#757575"
+                          style="color: rgb(117, 117, 117); position: absolute; font-size: 24px; display: block; user-select: none; transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; height: 24px; width: 24px; top: 4px; margin: 0px; left: 24px;">translate</span>
+                        <div>Translate</div>
+                      </div>
+                    </div>
+                  </span>
+                </div> -->
+              </div>
+            </mat-menu>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>
+
+      <mat-paginator
+        [pageSizeOptions]="[5, 10, 20]"
+        showFirstLastButtons
+      ></mat-paginator>
+    </div>
   </div>
 </div>
