--- a/src/app/shared/components/list-view/list-view.component.scss
+++ b/src/app/shared/components/list-view/list-view.component.scss
@@ -1,4 +1,44 @@
+.spinner {
+  position: absolute;
+  left: 50%;
+  top: 35%;
+  display: block;
+  z-index: 1000;
+  height: 31px;
+  width: 31px;
+}
+
 table {
   width: 100% !important;
   table-layout: fixed;
+
+  .rounded {
+    border-radius: 17px !important;
+    padding: 5px;
+  }
+
+  .delete {
+    color: red !important;
+  }
+
+  .hris-table {
+    color: rgba(0, 0, 0, 0.87);
+    background-color: rgb(255, 255, 255);
+    transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+    box-sizing: border-box;
+    font-family: Roboto, sans-serif;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 6px, rgba(0, 0, 0, 0.12) 0px 1px 4px;
+    border-radius: 2px;
+    z-index: 1;
+    padding: 0px;
+    margin: 0.5rem;
+    float: left;
+    width: 23%;
+    border: 1px solid #ccc !important;
+  }
+
+  .table-box-shodow {
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 6px, rgba(0, 0, 0, 0.12) 0px 1px 4px !important;
+  }
 }
