fix: fixing hiding services contents
Resolve the problem of hiding menu content after accessing the left menu items and get back to the
global service list.

--- a/src/app/shared/components/menu-services/menu-services.component.html
+++ b/src/app/shared/components/menu-services/menu-services.component.html
@@ -11,6 +11,7 @@
         matRipple
         [matRippleColor]="rippleEffectsColor"
         routerLink="/{{ menuConfiguration.route }}"
+        [queryParams]="{ open: true }"
         [ngClass]="{ active: menuConfiguration === menuConfig }"
         routerLinkActive="active"
         class="tab-menu-item"
