--- a/src/app/shared/components/main-content-container/main-content-container.component.html
+++ b/src/app/shared/components/main-content-container/main-content-container.component.html
@@ -1,12 +1,12 @@
-<main *ngIf="fieldsSettings" class="maintenance-left-menu-container">
+<main *ngIf="serviceSettings" class="maintenance-left-menu-container">
   <div>
     <div>
       <div>
         <div class="left-bar" class="maintenance-left-menu-container-item">
           <div class="maintenance-left-menu-container-holder">
             <div
-              *ngFor="let menu of fieldsSettings[0].menuOptions"
-              (click)="openMenuItemsList(menu, fieldsSettings[0])"
+              *ngFor="let menu of serviceSettings[0].menuOptions"
+              (click)="openMenuItemsList(menu, serviceSettings[0])"
             >
               <span tabindex="0" class="maintenance-left-menu-span">
                 <div>
@@ -14,7 +14,7 @@
                     class="left-menu-item"
                     matRipple
                     [matRippleColor]="rippleEffectsColor"
-                    [routerLink]="['/' + fieldsSettings[0].route, menu.route]"
+                    [routerLink]="['/' + serviceSettings[0].route, menu.route]"
                     routerLinkActive="active"
                     class="maintenance-left-menu-icon-text-representation"
                   >
@@ -35,7 +35,7 @@
     <div class="maintenance-left-menu-container-div">
       <div *ngIf="isServiceOpened" class="row ml-1 mt-2">
         <div
-          *ngFor="let menuItem of fieldsSettings[0].menuOptions"
+          *ngFor="let menuItem of serviceSettings[0].menuOptions"
           class="maintenance-left-menu-list-container"
         >
           <div>
@@ -48,7 +48,7 @@
               </div>
             </div>
             <div class="description">
-              {{ fieldsSettings[0].instruction }}
+              {{ serviceSettings[0].instruction }}
             </div>
             <div class="operation-div">
               <button tabindex="0" type="button" class="operations-button">
@@ -59,7 +59,7 @@
                   <span class="material-icons plus-button"></span>
                 </div>
               </button>
-              <button [routerLink]="['/' + fieldsSettings[0].route, menuItem.route]" (click)="openMenuItemsList(menuItem, fieldsSettings[0])" tabindex="0" type="button" class="list-button">
+              <button [routerLink]="['/' + serviceSettings[0].route, menuItem.route]" (click)="openMenuItemsList(menuItem, serviceSettings[0])" tabindex="0" type="button" class="list-button">
                 <div>
                   <div class="list-div">
                     <span class="list-item">List</span>
