feat: 🎸 added maintenance menu
This commit will add maintenance menu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="maintenance-app">
-    <hris-menu></hris-menu>
+    <hris-menu class="main-menu"></hris-menu>
+    <app-menu-services></app-menu-services>
     <router-outlet></router-outlet>
 </div>
