feat: 🎸 added menu navigation bar to the page
This commit will add support for the menu navigation bar to the page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="maintenance-app">
     <hris-menu class="main-menu"></hris-menu>
-    <app-menu-services></app-menu-services>
+    <app-menu-navigation-bar></app-menu-navigation-bar>
     <router-outlet></router-outlet>
 </div>
