refactor: 💡 changed the active link color orange to black
This commit will change the router link color from orange to black

--- a/src/app/shared/containers/menu-navigation-bar/menu-navigation-bar.component.scss
+++ b/src/app/shared/containers/menu-navigation-bar/menu-navigation-bar.component.scss
@@ -48,7 +48,8 @@
 
 .active {
   outline: none;
-  border-bottom: 3px solid orange;
+  // border-bottom: 3px solid orange;
+  border-bottom: 2px solid black;
 }
 
 .tab-menu-item:focus {
