--- a/src/app/shared/containers/list-view/list-view.component.html
+++ b/src/app/shared/containers/list-view/list-view.component.html
@@ -3,7 +3,7 @@
       <mat-form-field>
         <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search by name" />
       </mat-form-field>
-      <div *ngIf="apiDataResult"
+      <div *ngIf="APIDataResult"
         style=" box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 6px, rgba(0, 0, 0, 0.12) 0px 1px 4px;" class="">
         <table mat-table [dataSource]="dataSource">
           <ng-container matColumnDef="name">
@@ -20,7 +20,7 @@
           </ng-container>
           <ng-container matColumnDef="created">
             <th mat-header-cell *matHeaderCellDef><b>Created</b></th>
-            <td mat-cell *matCellDef="let element">
+            <td mat-cell  *matCellDef="let element">
               {{ element.created | date }}
             </td>
           </ng-container>
@@ -56,8 +56,8 @@
                       </div>
                     </span>
                   </div>
-                  <div>
-                    <span matRipple role="menuitem" tabindex="0"
+                  <div (click)="onDelete(element, APIParams)">
+                    <span matRipple role="menuitem" routerLinkActive="router-link-active"  tabindex="0"
                       style="border: 10px; box-sizing: border-box; display: block; font-family: Roboto, sans-serif; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); cursor: pointer; text-decoration: none; margin: 0px; padding: 0px; outline: none; font-size: 15px; font-weight: inherit; position: relative; z-index: 1; color: rgba(0, 0, 0, 0.87); line-height: 32px; transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; min-height: 32px; white-space: nowrap; background: none;">
                       <div>
                         <div style="margin-left: 0px; padding: 0px 24px 0px 64px; position: relative;">
